# ConfessionBot

./: .env.prod  .gitignore  LICENSE  README.md  __version__  bot.py  pyproject.toml  update_info.json
plugins/basic_plugins/: init.py  restart.py  update_info.py
plugins/basic_plugins/update/: __init__.py  source.py
plugins/plugins/: admin.py  menu.py  post.py  superusers.py
plugins/plugins/examine/: __init__.py  post.py  push.py  recieve.py
source/config/: config.json
utils/api/: source.py
utils/api_qq/: source.py
utils/config/: __init__.py  config.py
utils/database/: source.py
utils/permission/: __init__.py  source.py
