[project]
name = "ConfessionBot"
version = "0.1.0"
description = "ConfessionBot"
readme = "README.md"
requires-python = ">=3.10, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = []
plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.poetry]
name = "confessionbot"
version = "0.1.0"
description = "ConfessionBot"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nb-cli = "^1.2.2"
nonebot-adapter-onebot = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
